--- a/quora-service/pom.xml
+++ b/quora-service/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>quora-service</artifactId>
     <dependencies>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.2</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
